force-app/main/default/objects/ccrz__E_PriceGroupPricelist__c/ccrz__E_PriceGroupPricelist__c.object-meta.xml
<CustomObject>
    <description>Junction between Price group and Pricelist</description>
    <label>CC Price Group Pricelist</label>
    <nameField>
        <displayFormat>PGP-{0000000000}</displayFormat>
        <label>CC Price Group Pricelist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Price Group Pricelists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>