force-app/main/default/objects/ccrz__E_PriceGroupPricelist__c/fields/ccrz__PriceGroup__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PriceGroup__c</fullName>
    <description>Mapping to the price group for this entry.</description>
    <inlineHelpText>Mapping to the price group for this entry.</inlineHelpText>
    <label>CC Price Group</label>
    <referenceTo>ccrz__E_PriceGroup__c</referenceTo>
    <relationshipLabel>CC Price Group Pricelists</relationshipLabel>
    <relationshipName>PriceGroupPricelists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>