force-app/main/default/objects/ccrz__E_PriceGroupPricelist__c/fields/ccrz__PriceGroupPricelistID__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PriceGroupPricelistID__c</fullName>
    <description>External ID field</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID field</inlineHelpText>
    <label>Price Group Pricelist ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>